--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -111,7 +111,16 @@ button:hover {
     border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
-@media (max-width: 768px) {
+/* Estilos gerais */
+* {
+    box-sizing: border-box;
+}
+
+@media (max-width: 780px) {
+    * {
+        box-sizing: content-box;
+    }
+
     .app {
         padding: 10px;
     }
@@ -128,6 +137,7 @@ button:hover {
     .board {
         width: 300px;
         height: 300px;
+        padding: 10px;
     }
 
     .tile {
@@ -138,7 +148,7 @@ button:hover {
 }
 
 /* Prevenir o zoom em dispositivos móveis ao tocar nos elementos */
-@media (max-width: 768px) {
+@media (max-width: 780px) {
     input, select, textarea, button {
         font-size: 16px;
     }
